correción de ortografía en la web- fin

--- a/index.html
+++ b/index.html
@@ -1,53 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Recursive:wght@300;400;700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Recursive:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
-        <link rel="icon" href="./assets/icons/home.png">
+    <link rel="icon" href="./assets/icons/home.png">
 </head>
 
 <body>
     <header>
         <div class="header-page">
-          <div class="header-flex">
-            <div>
-                <a href="index.html"><img class="logo-primary" src="./assets/icons/logo.svg" alt="logo-Franco-pet-shop"></a> 
+            <div class="header-flex">
+                <div>
+                    <a href="index.html"><img class="logo-primary" src="./assets/icons/logo.svg"
+                            alt="logo-Franco-pet-shop"></a>
+                </div>
+                <div class="ubication-flex">
+                    <div>
+                        <img class="logo-ubication" src="./assets/img/location.svg" alt="">
+                    </div>
+                    <div>
+                        <p class="ubication-text">Río de Janeiro 300 - Caballito</p>
+                    </div>
+                </div>
             </div>
-            <div class="ubication-flex">
-              <div>
-                <img class="logo-ubication" src="./assets/img/location.svg" alt="">
-              </div>
-              <div>
-                <p class="ubication-text">Río de Janeiro 300 - Caballito</p>
-              </div>
-            </div>
-          </div>
         </div>
         <ul class="nav justify-content-center">
-          <li class="nav-item">
-            <a class="nav-link active" href="index.html">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contacto</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Tienda
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="toys.html">Juguetes</a>
-              <a class="dropdown-item" href="pharmacy.html">Farmacia</a>
-          </li>
-          </ul>
-      </header>
+            <li class="nav-item">
+                <a class="nav-link active" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contacto</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                    Tienda
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="toys.html">Juguetes</a>
+                    <a class="dropdown-item" href="pharmacy.html">Farmacia</a>
+            </li>
+        </ul>
+    </header>
     <div class="row container-fluid contenido-home">
         <div class="info-index col-sm-12 col-md-12 col-lg-12 col-xl-5">
             <div class="row somos-home">
@@ -68,15 +71,11 @@
                         ¿Quiénes somos?
                     </h2>
                     <p>
-                        La iniciativa FRANCO pet shop empezó como un
-                        proyecto para perros viendo un mercado mal
-                        informado y con poco interés a estas bellas criaturas.
-                        Actualmente nos vamos expandiendo con nuestros
-                        amigos mininos porque son nuestro día a día,
-                        vivimos con 2 perros y 4 gatos adoptados,
-                        sabemos lo que es tener un hijo peludo
-                        y por eso compartimos con nuestros clientes
-                        los mejores productos para su mascota.
+                        Somos un equipo de veterinarios y asesores que creamos relaciones basadas en la confianza y
+                        juntos nos comprometemos a cuidar a tu mascota como si fuera nuestra. Ofrecemos servicios y
+                        productos de primera calidad para que el vínculo entre tu mascota y vos sea más fuerte y mejor. <br>
+                        Nuestro principal objetivo es satisfacer todas las necesidades basicas entorno al desarrollo,
+                        crecimiento y bienestar de nuestras mascotas y brindar un servicio de calidad
                     </p>
                 </div>
                 <div class="container-fluid">
@@ -85,7 +84,7 @@
                     </h2>
                     <p>
                         Vendemos alimento balanceado de las mejores marcas del país y al mejor precio.
-                         También vendemos una amplia variedad de
+                        También vendemos una amplia variedad de
                         accesorios y hacemos envíos a todo el país!
                     </p>
                 </div>
@@ -121,7 +120,7 @@
                     <div class="carousel-item" data-interval="4000">
                         <img src="./assets/img/amarlos.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <p class="text-carousel">Simplemente...Amarlos.</p>
+                            <p class="text-carousel">simplemente...amarlos.</p>
                         </div>
                     </div>
                 </div>
@@ -150,21 +149,31 @@
     </div>
 
     <footer>
-        <ul class="list-inline">
-            <li class="list-inline-item"><a href="https://www.instagram.com/lionpetshopfranco/" target="_blank">
-                    <img src="/assets/icons/instagram.png" alt="">
-                </a></li>
-            <li class="list-inline-item"><a href="https://api.whatsapp.com/send?phone=5493517700279" target="_blank">
-                    <img src="/assets/icons/whatsapp.png" alt="">
-                </a></li>
-            <li class="list-inline-item"><a href="https://m.me/rusbent.matta" class="fab fa-facebook-messenger" target="_blank">
-                    <img src="/assets/icons/messenger.png"">
-                </a></li>
-            <li class="list-inline-item"><a href="mailto:francopet193@gmail.com">
-                    <img src="/assets/icons/correo.png" alt="">
-                </a></li>
-        </ul>
-        <p>©2020 Todos los derechos reservados - FRANCO pet shop </p>
+        <div class="row container-fluid">
+            <div class="contenido-footer  col-sm-12 col-md-6 col-lg-6 col-xl-6">
+                <p>Teléfono: (011)27700279</p>
+                <p>Dirección: Río de Janeiro 300 - Caballito</p>
+            </div>
+            <div class="contenido-footer col-sm-12 col-md-6 col-lg-6 col-xl-6">
+                <ul class="list-inline">
+                    <li class="list-inline-item"><a href="https://www.instagram.com/lionpetshopfranco/" target="_blank">
+                            <img src="/assets/icons/instagram.png" alt="">
+                        </a></li>
+                    <li class="list-inline-item"><a href="https://api.whatsapp.com/send?phone=5493517700279"
+                            target="_blank">
+                            <img src="/assets/icons/whatsapp.png" alt="">
+                        </a></li>
+                    <li class="list-inline-item"><a href="https://m.me/rusbent.matta" class="fab fa-facebook-messenger"
+                            target="_blank">
+                            <img src="/assets/icons/messenger.png"">
+                    </a></li>
+                <li class=" list-inline-item"><a href="mailto:francopet193@gmail.com">
+                                <img src="/assets/icons/correo.png" alt="">
+                            </a></li>
+                </ul>
+                <p>©2020 Todos los derechos reservados - FRANCO pet shop </p>
+            </div>
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
