--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
           <label for="validationCustom03">Teléfono</label>
           <input type="text" class="form-control" id="validationCustom03" required>
           <div class="invalid-feedback">
-            Por favor complete este campo con un numero de telefono.
+            Por favor complete este campo con un número de teléfono.
           </div>
         </div>
         <div class="col-md-6 mb-3">
@@ -99,24 +99,32 @@
     </form>
   </div>
 
-
-<footer>
-    <ul class="list-inline">
-        <li class="list-inline-item"><a href="https://www.instagram.com/lionpetshopfranco/" target="_blank">
-                <img src="/assets/icons/instagram.png" alt="">
+  <footer>
+    <div class="row container-fluid">
+      <div class="contenido-footer  col-sm-12 col-md-6 col-lg-6 col-xl-6">
+        <p>Teléfono: (011)27700279</p>
+        <p>Dirección: Río de Janeiro 300 - Caballito</p>
+      </div>
+      <div class="contenido-footer col-sm-12 col-md-6 col-lg-6 col-xl-6">
+        <ul class="list-inline">
+          <li class="list-inline-item"><a href="https://www.instagram.com/lionpetshopfranco/" target="_blank">
+              <img src="/assets/icons/instagram.png" alt="">
             </a></li>
-        <li class="list-inline-item"><a href="https://api.whatsapp.com/send?phone=5493517700279" target="_blank">
-                <img src="/assets/icons/whatsapp.png" alt="">
+          <li class="list-inline-item"><a href="https://api.whatsapp.com/send?phone=5493517700279" target="_blank">
+              <img src="/assets/icons/whatsapp.png" alt="">
             </a></li>
-            <li class="list-inline-item"><a href="https://m.me/rusbent.matta" class="fab fa-facebook-messenger" target="_blank">
-                <img src="/assets/icons/messenger.png"">
-            </a></li>
-        <li class="list-inline-item"><a href="mailto:francopet193@gmail.com">
+          <li class="list-inline-item"><a href="https://m.me/rusbent.matta" class="fab fa-facebook-messenger"
+              target="_blank">
+              <img src="/assets/icons/messenger.png"">
+                </a></li>
+            <li class=" list-inline-item"><a href="mailto:francopet193@gmail.com">
                 <img src="/assets/icons/correo.png" alt="">
-            </a></li>
-    </ul>
-    <p>©2020 Todos los derechos reservados - FRANCO pet shop </p>
-</footer>
+              </a></li>
+        </ul>
+        <p>©2020 Todos los derechos reservados - FRANCO pet shop </p>
+      </div>
+    </div>
+  </footer>
 
 <script src="/js/events.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
