--- a/gracias.html
+++ b/gracias.html
@@ -38,24 +38,32 @@
       <a class="nav-link" href="pharmacy.html">Farmacia</a>
       <a class="nav-link" href="toys.html">Juguetes</a>
     </div>
-
-    <footer>
+<footer>
+  <div class="row container-fluid">
+    <div class="contenido-footer  col-sm-12 col-md-6 col-lg-6 col-xl-6">
+      <p>Teléfono: (011)27700279</p>
+      <p>Dirección: Río de Janeiro 300 - Caballito</p>
+    </div>
+    <div class="contenido-footer col-sm-12 col-md-6 col-lg-6 col-xl-6">
       <ul class="list-inline">
-          <li class="list-inline-item"><a href="https://www.instagram.com/lionpetshopfranco/" target="_blank">
-                  <img src="/assets/icons/instagram.png" alt="">
+        <li class="list-inline-item"><a href="https://www.instagram.com/lionpetshopfranco/" target="_blank">
+            <img src="/assets/icons/instagram.png" alt="">
+          </a></li>
+        <li class="list-inline-item"><a href="https://api.whatsapp.com/send?phone=5493517700279" target="_blank">
+            <img src="/assets/icons/whatsapp.png" alt="">
+          </a></li>
+        <li class="list-inline-item"><a href="https://m.me/rusbent.matta" class="fab fa-facebook-messenger"
+            target="_blank">
+            <img src="/assets/icons/messenger.png"">
               </a></li>
-          <li class="list-inline-item"><a href="https://api.whatsapp.com/send?phone=5493517700279" target="_blank">
-                  <img src="/assets/icons/whatsapp.png" alt="">
-              </a></li>
-              <li class="list-inline-item"><a href="https://m.me/rusbent.matta" class="fab fa-facebook-messenger" target="_blank">
-                  <img src="/assets/icons/messenger.png"">
-              </a></li>
-          <li class="list-inline-item"><a href="mailto:francopet193@gmail.com">
-                  <img src="/assets/icons/correo.png" alt="">
-              </a></li>
+          <li class=" list-inline-item"><a href="mailto:francopet193@gmail.com">
+              <img src="/assets/icons/correo.png" alt="">
+            </a></li>
       </ul>
       <p>©2020 Todos los derechos reservados - FRANCO pet shop </p>
-  </footer>
+    </div>
+  </div>
+</footer>
 
     <script src="/js/events.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
