--- a/pharmacy.html
+++ b/pharmacy.html
@@ -46,7 +46,7 @@
   </header>
   <div class="container-toys">  
     <div class="container-title">
-        <h2>Nuestro catalogo de medicamentos</h2>
+        <h2>Nuestro catálogo de medicamentos</h2>
     </div>
     <div class="row container-fluid justify-content-md-center" id="infoPharma">
         
@@ -54,22 +54,31 @@
   </div>
     
   <footer>
-    <ul class="list-inline">
-        <li class="list-inline-item"><a href="https://www.instagram.com/lionpetshopfranco/" target="_blank">
-                <img src="/assets/icons/instagram.png" alt="">
+    <div class="row container-fluid">
+      <div class="contenido-footer  col-sm-12 col-md-6 col-lg-6 col-xl-6">
+        <p>Teléfono: (011)27700279</p>
+        <p>Dirección: Río de Janeiro 300 - Caballito</p>
+      </div>
+      <div class="contenido-footer col-sm-12 col-md-6 col-lg-6 col-xl-6">
+        <ul class="list-inline">
+          <li class="list-inline-item"><a href="https://www.instagram.com/lionpetshopfranco/" target="_blank">
+              <img src="/assets/icons/instagram.png" alt="">
             </a></li>
-        <li class="list-inline-item"><a href="https://api.whatsapp.com/send?phone=5493517700279" target="_blank">
-                <img src="/assets/icons/whatsapp.png" alt="">
+          <li class="list-inline-item"><a href="https://api.whatsapp.com/send?phone=5493517700279" target="_blank">
+              <img src="/assets/icons/whatsapp.png" alt="">
             </a></li>
-            <li class="list-inline-item"><a href="https://m.me/rusbent.matta" class="fab fa-facebook-messenger" target="_blank">
-                <img src="/assets/icons/messenger.png"">
-            </a></li>
-        <li class="list-inline-item"><a href="mailto:francopet193@gmail.com">
+          <li class="list-inline-item"><a href="https://m.me/rusbent.matta" class="fab fa-facebook-messenger"
+              target="_blank">
+              <img src="/assets/icons/messenger.png"">
+                </a></li>
+            <li class=" list-inline-item"><a href="mailto:francopet193@gmail.com">
                 <img src="/assets/icons/correo.png" alt="">
-            </a></li>
-    </ul>
-    <p>©2020 Todos los derechos reservados - FRANCO pet shop </p>
-</footer>
+              </a></li>
+        </ul>
+        <p>©2020 Todos los derechos reservados - FRANCO pet shop </p>
+      </div>
+    </div>
+  </footer>
  
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="/js/conection.js"></script>
